api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-backend-api-service
spec:
  type: ClusterIP #diff. LoadBalancer
  selector:
    app: golang-backend-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
